syntax = "proto3";

option java_package = "com.redmadrobot.robologs.protobuf.messages";
option java_multiple_files = true;
option swift_prefix = "Proto";

message Identifier { // uuid
  uint64 low = 1;
  uint64 high = 2;
}

message Scope {
  Identifier id = 1;
  string name = 2;
  optional Identifier parentId = 3;
  map<string, string> meta = 4;
}

message Log {
  enum Level {
    UNKNOWN = 0;
    VERBOSE = 1;
    DEBUG = 2;
    INFO = 3;
    WARNING = 4;
    ERROR = 5;
    CRITICAL = 6;
  }

  uint64 position = 1;
  uint64 timestampMillis = 2;

  optional Identifier scope = 3;
  Level level = 4;
  string label = 5;

  string message = 6;
  map<string, string> meta = 7;

  string codeReference = 8; // file:line function
}

message PerformanceLog {
  enum Bound {
    UNKNOWN = 0;
    START = 1;
    LAP = 2;
    END = 3;
  }

  Identifier id = 1;
  string name = 2;
  uint64 timestampMillis = 3;
}
